# tire-ai-pattern

./: ARCHITECTURE.md  pyproject.toml
.github/workflows/: notify-feishu.yml
docs/: exceptions_usage.md  logger_usage.md  models_usage.md  project_coding_standards.md  project_coding_standards_agent.md
docs/guide/rules/: rule6.md  (+1 more)
docs/plans/: FakeGenerationAPI.md  FakeGenerationAPI_v2.md  FakeGenerationAPI_v3.md  FakeGenerationAPI_v4.md
docs/prd/: add3ruleconfig.md  large_image_generation_function_prd.md  large_image_generation_function_prd_prompt.html  large_image_generation_function_prd_skilled.html  ref_config_for_pipeline1.html  ref_config_for_pipeline1.md  rule_modification.md
example/ref_configs/: cfg_4rib_sym_all_cont_all.py  cfg_5rib_sym_all_cont_all.py
scripts/: test_e2e_geometry_scorer.py  test_integrations_pipline1.py  test_integrations_pipline4_to_pipline1.py  test_split_big_image_into_small.py
src/models/: enums.py  rule_models.py  scheme_models.py
src/nodes/: stitch_scheme_generator.py
src/utils/: logger.py
tests/integrations/: test_fake_generation.py  test_joint_node2_node3.py  test_large_image_stitching.py  test_splitting.py  test_stitch_scheme_generator.py
tire_ai_pattern/api/: generation.py  splitting.py
tire_ai_pattern/config/: _builder.py
tire_ai_pattern/models/: rule_models.py  template_registry.py
tire_ai_pattern/nodes/: base.py  big_image_evaluator.py  big_image_splitter.py  big_image_stitcher.py  geometry_scorer.py  small_image_evaluator.py  stitch_scheme_generator.py
tire_ai_pattern/piplines/: pipline1.py  pipline4.py
(+107 files in other folders)
