[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tire-ai-pattern"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["tire_ai_pattern*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
